shortenened first two sections of last paper

--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -870,3 +870,10 @@ pages = {576--581},
 year = {2001}
 }
 
+@book{world2014global,
+  title={Global status report on noncommunicable diseases 2014},
+  author={WHO, World Health Organization and others},
+  number={WHO/NMH/NVI/15.1},
+  year={2014},
+  publisher={World Health Organization}
+}
