--- a/report/lastpaper/main_manuscript.tex
+++ b/report/lastpaper/main_manuscript.tex
@@ -192,7 +192,7 @@ Accepted March} 0000.}
 %  and a period at the end of the list.
 %
 \begin{keywords}
-Chronic diseases; Invasive medical tests; Joint models; Personalized schedules; Prostate biopsy; Surveillance
+Chronic NCDs; Invasive diagnostic tests; Joint models; Personalized schedules; Prostate biopsy; Surveillance
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
