--- a/report/lastpaper/mainmatter/abstract.tex
+++ b/report/lastpaper/mainmatter/abstract.tex
@@ -1,8 +1,6 @@
 \begin{abstract}
-%225 words are maximum. Currently 224 words
-Commonly used gold standard surveillance \textit{tests} (biopsies, endoscopies, etc.) for confirming disease \textit{progression} in early-stage chronic non-communicable disease patients (cancer, cardiovascular, etc.) are invasive. For detecting progression timely (benefit), patients are exposed to numerous invasive tests repeatedly (burden) over their lifetime as per a fixed one-size-fits-all schedule. Motivated by this problem in the world's largest prostate cancer surveillance study PRIAS, we present disease progression risk-based personalized test schedules, that aim to better balance the number of invasive tests (burden), and time delay in detection of progression (less is beneficial) than fixed schedules.
+%225 words are maximum. Currently 225 words
+Gold standard surveillance \textit{tests} for diagnosing disease \textit{progression} (biopsies, endoscopies, etc.) in early-stage chronic non-communicable disease patients (e.g.,~cancer, lung diseases) are usually invasive. For detecting progression timely, over their lifetime, patients undergo numerous invasive tests planned in a fixed one-size-fits-all manner (e.g.,~biannually). We present progression-risk based personalized test schedules that aim to balance better the number of tests (burden) and time delay in detecting progression (shorter is beneficial) than fixed schedules. Our motivation comes from the world's largest prostate cancer surveillance study PRIAS.
 
-%Patients diagnosed with early-stage chronic non-communicable diseases (cancer, cardiovascular, etc.) undergo invasive medical tests (biopsies, endoscopies, etc.), repeatedly for timely detection of disease \textit{progression}. Commonly, a fixed one-size-fits-all test schedule is employed for all patients. Consequently, many slow/non-progressing patients experience numerous unnecessary, burdensome tests over their lifetime. Motivated by this problem in the world's largest prostate cancer surveillance study PRIAS, we present personalized test schedules to balance the number of invasive tests (burden), and time delay in detection of progression (less is beneficial) better than fixed schedules. 
-Using joint models for time-to-event and longitudinal data, we first consolidate auxiliary longitudinal data (e.g.,~biomarkers) and results of previous invasive tests, into individualized future cumulative-risk of \textit{progression}. Under this risk profile, we optimize a utility function of the number of tests and expected time delay in detection of progression to obtain a personalized schedule of invasive tests. Personalized schedules are updated as more patient
-data becomes available over follow-up. We assist patients/doctors in comparing the consequences of opting for personalized versus fixed schedules objectively. For this, we exploit a patient's cumulative-risk profile to estimate the expected time delay in detection of progression for following both personalized and fixed schedules, in a patient-specific manner. We implement our methodology in a web-application for real prostate cancer patients of the PRIAS study.
+Using joint models for time-to-event and longitudinal data, we consolidate auxiliary longitudinal data (e.g.,~biomarkers) and results of previous tests, into individualized future cumulative-risk of progression. We then create personalized schedules by planning tests on future visits where the predicted progression-risk is above a particular \textit{threshold} (e.g., 5\% risk). This schedule is updated on each follow-up with newly gathered data. To find the optimal risk threshold, we minimize a utility function of the expected number of tests (burden) and time delay in detecting progression (shorter is beneficial) for different thresholds. We estimate these two quantities in a patient-specific manner for following any schedule, by utilizing the predicted risk profile of the patient. Patients/doctors can employ these quantities to objectively compare various personalized and fixed schedules. Last, we implement our methodology in a web-application for real PRIAS study cancer patients.
 \end{abstract}
