--- a/report/lastpaper/mainmatter/introduction.tex
+++ b/report/lastpaper/mainmatter/introduction.tex
@@ -1,9 +1,9 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Introduction}
 \label{sec:introduction}
-Non-communicable diseases (e.g., cancer, renal, cardiovascular diseases, etc.) are the primary cause of human deaths worldwide~\citep{alwan2010monitoring}. In many patients diagnosed with an early stage disease, periodical surveillance \textit{tests} are recommended to detect disease \textit{progression}, a non-terminal event. Often the most accurate or gold standard surveillance tests are also invasive. For example, to confirm progression, biopsies are conducted repeatedly in low-grade prostate cancer~\citep{bokhorst2015compliance}, endoscopies in Barrett's esophagus~\citep{streitz1993endoscopic}, and colonoscopies in colorectal cancer~\citep{krist2007timing} patients. Repeat biopsies are also utilized to detect allograft deterioration in lung~\citep{mcwilliams2008surveillance} and kidney transplant~\citep{henderson2011surveillance} patients.
+Chronic non-communicable diseases (e.g., cancer, lung, cardiovascular diseases) cause 60--70\% of human deaths worldwide~\citep{world2014global}. Often patients diagnosed with an early-stage disease undergo repeated surveillance \textit{tests} to timely detect disease \textit{progression}, a non-terminal event. Gold standard surveillance tests utilized for this purpose are usually invasive. For example, in prostate cancer surveillance, progression from low to high-grade is detected using biopsies~\citep{bokhorst2015compliance}. Similarly, endoscopies are employed in Barrett's esophagus~\citep{streitz1993endoscopic}, colonoscopies for colorectal cancer~\citep{krist2007timing}, and bronchoscopies for detecting lung transplant~\citep{mcwilliams2008surveillance} deterioration.
 
-Usually, invasive tests are scheduled in a fixed manner, e.g., every six months. The frequency of tests in these fixed schedules varies between diseases~\citep{henderson2011surveillance,bokhorst2015compliance,krist2007timing} and cohorts. Although, due to the periodical nature of test schedules, progression is always detected with a time delay (Figure~\ref{fig:delay_explanation}). This time delay can be reduced by scheduling invasive tests frequently. However, invasive tests are difficult to conduct, can lead to severe complications~\citep{loeb2013systematic,krist2007timing}, cause patient discomfort, and sometimes patients may not comply with frequent tests~\citep{bokhorst2015compliance}. In this regard, fixed test schedules ignore the differences in speed of progression between patients, and impose an equal medical burden on all. Hence, the frequency of invasive tests holds important implications for patients.
+Often fixed schedules (e.g., biannually) are utilized for invasive tests in surveillance~\citep{mcwilliams2008surveillance,bokhorst2015compliance,krist2007timing}. Since tests are conducted periodically, there is always a time delay in detecting progression (Figure~\ref{fig:delay_explanation}). The frequency/timing of tests and the corresponding time delay in detecting progression, manifest the burden and benefit of test schedules, respectively. Tests are burdensome because they may cause pain and/or severe medical complications~\citep{loeb2013systematic,krist2007timing}, and consequently patients may not always comply with frequent tests~\citep{bokhorst2015compliance}. On the other hand, detecting progression timely can provide a larger window of opportunity for curative treatment. In this regard, one-size-fits-all fixed schedules impose an equal but unnecessary burden on all patients, because many early-stage patients can be slow/non-progressing.
 
 \begin{figure}
 \centerline{\includegraphics{images/delay_explanation.eps}}
@@ -11,10 +11,10 @@ Usually, invasive tests are scheduled in a fixed manner, e.g., every six months.
 \label{fig:delay_explanation}
 \end{figure}
 
-In this paper, we aim to balance the number of invasive tests (burden) and the time delay in detecting disease progression (less is beneficial) better than fixed schedules. For this purpose, we intend to create personalized test schedules that exploit patient-specific clinical data accumulated during follow-up. In surveillance, this data includes baseline characteristics of patients; results from previous invasive tests; and auxiliary longitudinal outcomes such as biomarkers, physical examination, and medical imaging measurements, etc. Previous approaches for personalized schedules can be divided into three categories. First, heuristic methods such as decision making flowcharts, e.g.,~\citet{bokhorst2015compliance}. However, flowcharts discretize continuous clinical outcomes, often utilize only the last measurement, and ignore the measurement error in observed outcomes. The second method is employing partially observable Markov decision processes~\citep{alagoz2010operations, steimle2017markov} for personalized test decisions. Although, the curse of dimensionality limits their application with continuous longitudinal outcomes. Third, personalized schedules obtained by optimizing an explicit utility function of the clinical parameters of interest~\citep{bebu2017optimal,rizopoulos2015personalized}, including our previous work on scheduling biopsies in prostate cancer~\citep{tomer2019personalized}. In this work, we will employ the third approach.
+In this work, we aim to balance the number of invasive tests and the time delay in detecting progression better than fixed schedules. Specifically, we intend to create personalized schedules that utilize patient-specific clinical data accumulated over follow-up. In surveillance, this data includes baseline characteristics; previous invasive test results; and auxiliary longitudinal outcomes such as biomarkers, physical examination, and medical imaging measurements, etc. Previous attempts at personalized scheduling can be divided into three categories. First, heuristic approaches such as decision making flowcharts, e.g.,~\citet{bokhorst2015compliance}. However, flowcharts discretize continuous clinical outcomes, often exploit only the last measurement, and ignore the measurement error in observed data. Second, partially observable Markov decision processes~\citep{alagoz2010operations, steimle2017markov} for personalizing test decisions. Although, the curse of dimensionality limits their application with continuous longitudinal outcomes. Third, personalized schedules obtained by optimizing an explicit utility function of the clinical parameters of interest~\citep{bebu2017optimal,rizopoulos2015personalized}, including our previous work on scheduling biopsies in prostate cancer~\citep{tomer2019personalized}. In this work, we will employ the third approach.
 
-Our methodology is as follows. First, we develop a full specification of the joint distribution of disease and patient-specific longitudinal outcomes and the time of \textit{progression}. We achieve this using joint models for time-to-event and longitudinal data~\citep{tsiatis2004joint,rizopoulos2012joint}. We use joint models because they are inherently personalized. Specifically, they exploit patient-specific random effects~\citep{laird1982random} to model longitudinal outcomes without discretizing them. We subsequently employ the fitted joint model for new patients to estimate their patient-specific cumulative-risk of progression over their current and future follow-up visits. These risk predictions utilize their clinical data accumulated until their latest follow-up. We schedule invasive tests on all those future time points where a patient's conditional cumulative-risk of progression is equal to a certain threshold (e.g., 10\% risk). We then automate the choice of this threshold and the resulting schedule. More specifically, we optimize a function of the expected number of tests and the expected time delay in detecting progression (Figure~\ref{fig:delay_explanation}) corresponding to different risk threshold based personalized schedules. We estimate the expected number of tests and time delay in a patient-specific manner for both fixed and personalized schedules. This can help patients/doctors to evaluate the consequences of opting for personalized versus fixed schedules objectively.
+In our methodology, we first develop a full specification of the joint distribution of the patient-specific longitudinal outcomes and the time of \textit{progression}. To this end, we employ joint models for time-to-event and longitudinal data~\citep{tsiatis2004joint,rizopoulos2012joint} because they are also inherently personalized. Specifically, they exploit patient-specific random effects~\citep{laird1982random} to model longitudinal outcomes without discretizing them. Subsequently, we input the accumulated clinical data of a new patient into the fitted model, to obtain their patient-specific cumulative-risk of progression at their current and future follow-up visits. We then create personalized schedules by planning tests on future visits where the predicted conditional cumulative-risk is above a particular \textit{threshold} (e.g., 5\% risk). We automate the choice of this threshold and the resulting schedule. Specifically, we optimize a utility function of the expected number of tests (burden) and time delay in detecting progression (shorter is beneficial) for different risk threshold based personalized schedules. We estimate these two quantities in a patient-specific manner for following any schedule, by utilizing the predicted risk profile of the patient. Patients/doctors can employ these quantities to objectively compare various personalized and fixed schedules.
 
-This research is motivated by the problem of scheduling biopsies~\citep{nieboer2018active} in the world's largest prostate cancer active surveillance study PRIAS~\citep{bokhorst2015compliance}. It has 7813 patients, 104,904 longitudinal measurements, and 1134 patients with cancer progression. These patients have low/very-low grade prostate cancer, often over-diagnosed due to prostate-specific antigen (PSA) based screening tests~\citep{crawford2003epidemiology}. The goal of surveillance upon diagnosis is to delay serious treatments (e.g., surgery, chemotherapy, etc.) until cancer progresses further. For this purpose, patients are monitored continually via PSA (ng/mL) blood tests, digital rectal examination (DRE) for shape and size of the tumor, and biopsy Gleason grade group~\citep{epsteinGG2014}. Since biopsy results are the strongest indicator of cancer-related outcomes, treatment is commonly advised upon observing an increase in a patient's biopsy Gleason grade group (cancer progression). The most commonly used schedule of biopsies in prostate cancer active surveillance is annual biopsies~\citep{loeb2014heterogeneity}. However, they lead to many unnecessary biopsies in slow/non-progressing patients (50\% proportion in some cohorts). Biopsy burden combined with patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} has raised concerns regarding the optimal biopsy schedule. Since prostate cancer has the second-highest incidence among all cancers in males~\citep{GlobalCancerStats2012}, biopsy schedules tailored for individual patients can reduce the overall burden of biopsies in a large number of patients worldwide.
+Our work is motivated by the problem of scheduling biopsies~\citep{nieboer2018active} in the world's largest prostate cancer active surveillance study PRIAS~\citep{bokhorst2015compliance}. It has 7813 patients (1134 cancer progressions) with 104904 longitudinal measurements. At inclusion, patients have low/very-low grade cancer, often over-diagnosed due to prostate-specific antigen (PSA) screening tests~\citep{crawford2003epidemiology}. The goal of prostate cancer surveillance is to delay serious treatments (e.g., surgery, chemotherapy) until cancer progresses. For detecting progression, patients are monitored continually via serum PSA (ng/mL), digital rectal examination (DRE) for shape/size of the tumor, and biopsy Gleason grade group~\citep{epsteinGG2014}. Since biopsy results are the strongest indicator of cancer-related outcomes, treatment is commonly advised when patient's biopsy Gleason grade group increases (cancer progression). The most prescribed schedule of biopsies in prostate cancer surveillance is annual biopsies~\citep{loeb2014heterogeneity}. However, they lead to many unnecessary biopsies in slow/non-progressing patients (50\% proportion in some cohorts). Biopsy burden combined with patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} has raised concerns regarding the optimal biopsy schedule. Since prostate cancer has the second-highest incidence among all cancers in males~\citep{GlobalCancerStats2012}, individualized biopsy schedules can reduce the burden of biopsies numerous patients worldwide.
 
 The rest of the paper is as follows. Section~\ref{sec:jointmodel} briefly introduces the joint modeling framework. In Section~\ref{sec:schedule}, we present the methodology for personalized schedules and then demonstrate them for biopsies in real PRIAS patients in Section~\ref{sec:results}. Lastly, in Section~\ref{sec:sim_study}, we show the efficacy of personalized schedules via a realistic simulation study based on PRIAS patients.
