--- a/report/lastpaper/supplementary/prias_param_estimates.tex
+++ b/report/lastpaper/supplementary/prias_param_estimates.tex
@@ -224,7 +224,7 @@ With regards to the choice of the distribution for the error term $\varepsilon_p
 
 \clearpage
 \subsection{Predictive Performance of the Joint Model Fitted to the PRIAS dataset}
-The performance of personalized schedules depends on the performance of the joint model. In this regard, we evaluate the predictive performance of the model that we fitted to the PRIAS dataset, using two measures: the area under the receiver operating characteristic curve (AUC) as a measure of discrimination, and the mean absolute prediction error (MAPE) as a measure of calibration. Given the longitudinal nature of the data at hand, in a joint model time dependent AUC and MAPE are more relevant. More specifically, in PRIAS, given the time of latest biopsy $t$, and history of DRE and PSA measurements up to time $s$, we are interested in a medically relevant time frame $(t, s]$, within which the occurrence of progression is of interest. In the case of prostate cancer, at any point in time it is of interest to identify patients who may have obtained progression in the last one year ($s-t = 1$). Using data of the patients from the PRIAS study, we calculate the AUC and MAPE (see \citet{landmarking2017} for estimation) at every six months (schedule of PSA/DRE measurement follow-up in PRIAS) between year one and year six (roughly the 95-percentile of observed follow-up times). The resulting AUC, and MAPE are presented in \ref{tab:AUC_PE}. We can see that the our model has a moderate AUC and MAPE. Thus, we expect even better performance of personalized schedules than in our simulation study, in joint models with better AUC and MAPE.
+The performance of personalized schedules depends on the performance of the joint model. In this regard, we evaluate the predictive performance of the model that we fitted to the PRIAS dataset, using two measures: the area under the receiver operating characteristic curve or AUC (measure of discrimination), and the mean absolute prediction error (MAPE). Given the longitudinal nature of the data at hand, in a joint model time-dependent AUC and MAPE are more relevant~\citep{landmarking2017}. More specifically, in PRIAS, given the time of latest biopsy $t$, and history of DRE and PSA measurements up to time $s$, we are interested in a medically relevant time frame $(t, s]$, within which the occurrence of progression is of interest. In the case of prostate cancer, at any point in time it is of interest to identify patients who may have obtained progression in the last one year ($s-t = 1$). Using data of the patients from the PRIAS study, we calculate the AUC and MAPE (see \citet{landmarking2017} for estimation) at every six months (schedule of PSA/DRE measurement follow-up in PRIAS) between year one and year six (roughly the 95-percentile of observed follow-up times). The resulting AUC, and MAPE are presented in \ref{tab:AUC_PE}. We can see that the our model has a moderate AUC and MAPE. Thus, in joint models with better AUC and MAPE we expect even better performance of personalized schedules than in our simulation study.
 
 \begin{table}[!htb]
 \begin{center}
