--- a/report/lastpaper/mainmatter/discussion.tex
+++ b/report/lastpaper/mainmatter/discussion.tex
@@ -1,12 +1,12 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
 \label{sec:discussion}
-In this paper, we presented a methodology to create personalized schedules for burdensome surveillance \textit{tests}, to detect disease \textit{progression} in early-stage chronic non-communicable diseases. To this end, we utilized the framework of joint models for time-to-event and longitudinal data. Our approach first combines a patient's auxiliary longitudinal data (e.g., biomarkers) and results from previous invasive tests to estimate the patient-specific cumulative-risk of disease progression over his current and future follow-up time period. Then, using this risk profile, we schedule future invasive tests whenever the patient's conditional cumulative-risk of progression is predicted to be above a certain threshold. We select this risk threshold automatically in a personalized manner, by optimizing a utility function of the patient-specific consequences of choosing a particular risk threshold based schedule. These consequences are, namely, the number of invasive tests for a particular schedule, and the expected time delay in detection of progression if that schedule is followed. Last, we calculate this expected time delay in a personalized manner for both personalized and fixed schedules to assist patients/doctors in making a more informed decision of choosing a test schedule.
+In this paper, we presented a methodology to create personalized schedules for burdensome diagnostic \textit{tests} utilized to detect disease \textit{progression} in early-stage chronic non-communicable disease \textit{surveillance}. For this purpose, we utilized the framework of joint models for time-to-event and longitudinal data. Our approach first combines a patient's auxiliary longitudinal data (e.g., biomarkers) and results from previous invasive tests to estimate the patient-specific cumulative-risk of disease progression over his current and future follow-up time period. Then, using this risk profile, we schedule future invasive tests whenever the patient's cumulative-risk of progression is predicted to be above a certain threshold. We select this risk threshold automatically in a personalized manner, by optimizing a utility function of the patient-specific consequences of choosing a particular risk threshold based schedule. These consequences are, namely, the number of invasive tests (burden) for a particular schedule, and the expected time delay in detection of progression (shorter is beneficial) if that schedule is followed. Last, we calculate this expected time delay in a personalized manner for both personalized and fixed schedules to assist patients/doctors in making a more informed decision of choosing a test schedule.
 
-The use of joint models gives our schedules certain advantages. First, joint models utilize individualized random-effects, making our schedules inherently personalized. Second, the patient-specific risk of progression employed by the proposed personalized schedules is estimated by utilizing all observed longitudinal and clinical data of a patient. In addition, the continuous longitudinal outcomes are not discretized, which is commonly a case in Markov Decision Process based~\citep{alagoz2010operations, steimle2017markov}, and flowchart-based test schedules. The third and most significant advantage of our schedules, however, is that they update as more patient data becomes available over follow-up. Last, although this work concerns with the use of personalized schedules in disease surveillance, the methodology is generic for use under a screening setting as well.
+The use of joint models gives our schedules certain advantages. First, joint models utilize individualized random-effects, making our schedules inherently personalized. Second, the patient-specific risk of progression employed by the proposed personalized schedules is estimated by utilizing all observed longitudinal and clinical data of a patient. In addition, the continuous longitudinal outcomes are not discretized, which is commonly a case in Markov Decision Process based~\citep{alagoz2010operations, steimle2017markov}, and flowchart-based test schedules. Third, our schedules update automatically with more patient data over follow-up. Last, although this work concerns with the use of personalized schedules in disease surveillance, the methodology is generic for use under a screening setting as well.
 
-Since our schedules are risk-based, we proposed a utility function to automate the choice of a risk threshold based schedule. The utility function that we proposed focused only on two aspects of a schedule, namely the burden and the benefit. In this regard, we chose the number of invasive tests in a schedule (burden) and expected time delay in detection of progression (less is beneficial) because they are easy to interpret and are critical in making the decision of an invasive test. Since we calculate the expected time delay in a patient-specific manner for both personalized and fixed schedules, patients/doctors can compare and choose various risk-based and fixed schedules according to their preferences for the expected burden-benefit ratio. Additional measures such as (quality-adjusted) life-years saved can also be easily added in our utility function. 
+Since our schedules are risk-based, we proposed a utility function to automate the choice of a risk threshold based schedule. The utility function that we proposed focused only on two aspects of a schedule, namely the burden and the benefit. In this regard, we chose the expected number of invasive tests in a schedule (burden) and time delay in detection of progression (less is beneficial) because they are easy to interpret and are critical in making the decision of an invasive test. We chose these two criteria because they also manifest financial and medical burden of tests, window of opportunity for curative treatment, and additional benefits of detecting disease early. Since we calculated both expected number of tests and time delay in a patient-specific manner for both personalized and fixed schedules, patients/doctors can compare and choose various risk-based and fixed schedules according to their preferences for the expected burden-benefit ratio. Additional measures such as (quality-adjusted) life-years saved can also be easily added in our utility function. 
 
-We evaluated the efficacy of personalized schedules in a full cohort via a realistic simulation randomized clinical trial for prostate cancer active surveillance patients. We observed that the personalized schedule that used an automatically chosen risk threshold using~(\ref{eq:kappa_choice}) reduced unnecessary biopsies for patients who did not observe progression in the study period, compared to fixed schedules. In contrast, in patients who observed progression, the personalized schedule with automatically chosen risk threshold scheduled fewer biopsies at the cost of having a slightly more time delay in detecting progression than the PRIAS schedule. However, this by no means is the limit of the performance of the personalized schedules. In general, personalized schedules employing models with higher predictive accuracy (both discrimination and calibration) than the PRIAS based model may lead to an even better balance between the number of tests and the time delay in detecting progression.
+We evaluated the efficacy of personalized schedules in a full cohort via a realistic simulation randomized clinical trial for prostate cancer active surveillance patients. We observed that the personalized schedule that used an automatically chosen risk threshold using~(\ref{eq:kappa_choice}) reduced unnecessary biopsies for patients who did not observe progression in the study period, compared to annual schedule. In contrast, in patients who observed progression, the personalized schedule with automatically chosen risk threshold scheduled fewer biopsies at the cost of having a slightly more time delay in detecting progression than the fixed schedules. However, this by no means is the limit of the performance of the personalized schedules. In general, personalized schedules employing models with higher predictive accuracy and discrimination capacity than the PRIAS based model, may lead to an even better balance between the number of tests and the time delay in detecting progression.
 
-There are certain limitations of our work. First, in practice, most cohorts observe Type-I right censoring. Hence, the cumulative-risk profiles of patients and the calculation of expected time delay in detection of progression is only possible up to the time of Type-I censoring. This problem can only be resolved as more follow-up data become available over time. We proposed a joint model which assumes all events other than progression to be non-informative censoring. Alternative models that account for competing risks may lead to better results as they estimate absolute and not the cause-specific risk of progression. However, the methodology for scheduling biopsies need not change. Many surveillance tests are imperfect and prone to inter-observer variation (e.g.,~biopsy Gleason grade). Models that account for inter-observer variation in diagnostic tests~\citep{balasubramanian2003estimation} will be exciting to investigate further.
+There are certain limitations of our work. First, in practice, most cohorts observe Type-I right censoring. Hence, the cumulative-risk profiles of patients and the calculation of expected time delay in detection of progression is only possible up to the time of Type-I censoring. This problem can only be resolved as more follow-up data become available over time. We proposed a joint model which assumes all events other than progression to be non-informative censoring. Alternative models that account for competing risks may lead to better results as they estimate absolute and not the cause-specific risk of progression. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further.
